--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=2.12.0 <4.0.0'
+  # sdk: ^3.5.4
 
 dependencies:
   
@@ -33,6 +34,8 @@ dependencies:
   sqflite_common_ffi_web: ^1.0.0
   sqflite_common_ffi: ^2.3.5
   scrollable_positioned_list: ^0.3.8
+  turn_page_transition: ^0.4.0
+  page_flip: ^0.2.5+1
 
 dev_dependencies:
   flutter_test:
