--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,20 +22,14 @@ dependencies:
   uuid: ^4.5.1
   image_picker: ^1.1.2
   audioplayers: ^6.4.0
-  sqlite3_flutter_libs: ^0.5.0
-  drift: ^2.16.0
   path: ^1.8.0
 
   flutter_localizations:
       sdk: flutter
   flutter_tts: ^4.2.2
   google_fonts: ^6.2.1
-  sqflite: ^2.4.2
-  sqflite_common_ffi_web: ^1.0.0
-  sqflite_common_ffi: ^2.3.5
   scrollable_positioned_list: ^0.3.8
-  turn_page_transition: ^0.4.0
-  page_flip: ^0.2.5+1
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +38,6 @@ dev_dependencies:
   build_runner: ^2.4.7
   freezed: ^2.4.6
   json_serializable: ^6.7.1
-  drift_dev: ^2.16.0
 
 flutter:
   uses-material-design: true
