--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.1.5
   flutter_colorpicker: ^1.1.0
   shared_preferences: ^2.5.3
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +73,12 @@ flutter:
         - asset: assets/fonts/Vazirmatn/static/Vazirmatn-Regular.ttf
         - asset: assets/fonts/Vazirmatn/static/Vazirmatn-Bold.ttf
           weight: 700
-
+    - family: osmanTaha
+      fonts:
+        - asset: assets/fonts/osman_taha/uthmanTaha.ttf
+    - family: UthmanicHafs
+      fonts:
+        - asset: assets/fonts/osman_taha/UthmanicHafs.otf
 
 
 
